# GeoMorph_AI

./: .gitignore  README.md  demo_app.py  dry_run.py  inference.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: baseline.yaml
docs/: Architecture.md  Benchmark.md  Dataset.md  Deployment.md  FAQ.md  GIS.md  Inference.md  Rasterization.md  Training.md  Troubleshooting.md
examples/: gis_export.ipynb
scripts/: ablation.py  audit_inference.py  benchmark.py  build_training_dataset.py  cli.py  evaluate_external.py  gen_gt.py  generate_docs.py  generate_notebooks.py  generate_tests.py  omega_pipeline.py  run_auto_annotator.py  run_loocv.py
src/: alignment.py  augmentation.py  checkpoint.py  config.py  data_ingestion.py  dataset.py  geo_utils.py  geometry_validator.py  gis_export.py  logging_utils.py  losses.py  metadata_logger.py  metrics.py  model_registry.py  postprocess.py  predictor.py  rasterize.py  stitcher.py  tiling.py  train.py  vectorize.py  visualization.py
tests/: test_dataset.py  test_inference.py  test_metrics.py  test_rasterization.py  test_vectorization.py
